# libobs-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: copilot-setup-steps.yml  publish.yml  validation.yml
cargo-obs-build/: CI_SETUP.md  Cargo.toml
cargo-obs-build/mock_responses/: obs_studio_release.json  obs_studio_release_latest.json
cargo-obs-build/src/: args.rs  download.rs  lib.rs  lib_version.rs  macos.rs  main.rs  util.rs
examples/download-at-runtime/: Cargo.toml
examples/download-at-runtime/src/: main.rs  record.rs
examples/monitor-capture/: Cargo.toml
examples/obs-preview/: Cargo.toml
examples/replay-buffer/: Cargo.toml
libobs/: Cargo.toml  build.rs  obs.lib
libobs-bootstrapper/: Cargo.toml  README.md
libobs-bootstrapper/mock_responses/: libobs_builds_release.json
libobs-bootstrapper/src/: download.rs  error.rs  extract.rs  lib.rs  version.rs
libobs-simple/: Cargo.toml
libobs-simple-macro/: Cargo.toml
libobs-simple-macro/src/: lib.rs  parse.rs
libobs-simple/tests/: gpu_encoder_test_switch.rs  gpu_integration_preview.rs  gpu_integration_preview_test.rs  gpu_replay_buffer.rs  gpu_sources_test_game_capture.rs  gpu_sources_test_monitor_capture.rs  gpu_sources_test_window_capture.rs  gpu_stage_3_leak_test_output_with_encoders.rs  gpu_stage_4_leak_test_scene.rs  gpu_stage_5_leak_test_source.rs  gpu_stage_6_leak_test_recording.rs  integration_data.rs  integration_output_lifecycle.rs  integration_scene_management.rs  stage_2_leak_output.rs
libobs-window-helper/: Cargo.toml
libobs-window-helper/src/: lib.rs  monitor.rs  window.rs
libobs-wrapper/: Cargo.toml  build.rs
libobs-wrapper/src/: context.rs  enums.rs  lib.rs  macros.rs  runtime.rs  unsafe_send.rs
scripts/: lint.py  run-integration-tests-with-debugger.ps1  update-libobs.ps1
(+117 files in other folders)
