[package]
name = "cargo-obs-build"
description = "A library and CLI tool used to build the libobs library and put it in the target directory"
version = "2.0.5"
readme = "README.md"
license = "MIT"
repository = "https://github.com/libobs-rs/libobs-rs"
authors = ["sshcrack"]
keywords = ["obs", "libobs", "video", "build", "prepare"]
edition = "2021"

[lib]
name = "cargo_obs_build"
path = "src/lib.rs"

[[bin]]
name = "cargo-obs-build"
path = "src/main.rs"

[dependencies]
# Core library dependencies
anyhow = { workspace=true, features = ["backtrace"] }
cargo_metadata = { version = "0.23.0" }
hex = { workspace = true }
http_req = "0.14.1"
indicatif = { workspace = true, optional = true}
log = { workspace = true }
process_alive = "0.2.0"
regex = { version = "1.12.2" }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = "0.9.10"
walkdir = "2.5.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"

# Binary-specific dependencies
clap = { version = "4", features = ["derive"], optional = true }
colored = { workspace = true, optional = true }
fern = { version = "0.7", features = ["colored"], optional = true }

[features]
default = ["cli"]
cli = ["clap", "colored", "fern", "indicatif"]
__mock_github_responses = []

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
